2010-09-23  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 
	Bumping version to 3.06.91 (in preps for 3.07)

	* libxnee/src/xnee_fake.c (xnee_fake_motion_event_impl): 
	Removed crappy printf statement

	* libxnee/src/xnee_expr.c (xnee_expression_handle_replay): 
	Storing time for XI events

	* libxnee/include/libxnee/xnee_xinput.h: 
	* libxnee/src/xnee_xinput.c (xnee_handle_xinput_event): 
	Added server time as argument since we need the time source

	* libxnee/src/xnee_fake.c: 
	Making sure XI motions events are faked as absolute
	Improved handling of XI events

	* libxnee/src/xnee_replay.c (xnee_replay_main_loop): 
	Changed to replaying/faking XInput Slave events instead of master

	* libxnee/src/xnee_record.c (xnee_record_handle_event_printer): 
	Printing a "#" in front of every "normal" motion event (devel fix) v

	* doc/xnee_copying: 
	Updated (c) year

	* doc/version.texi: 
	Updated (c) year

2010-09-22  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_xinput.c (xnee_handle_xinput_event): 
	Changed exit to print a warning (stderr) and return with errorr code

	* configure.in: 
	Updated version to 3.06.90 to prepare for 3.07

	* libxnee/src/xnee_fake.c (xnee_replay_event_handler): 
	Indentation fix

	* libxnee/src/xnee_range.c: 
	Changed "WARNING" to "NOTIFICATION" in warning text 

	* libxnee/src/xnee_session.c (xnee_rep_prepare): 
	Added extra call (for second call of fun :( )  to
	xnee_setup_display
	Continuing if XNEE_OK returned from xnee_replay_main_loop

	* libxnee/src/xnee_record.c: 
	Enabled recording even if screen < 0
	Added print of xnee_data and control dpy in fprintf statement

	* libxnee/src/xnee_replay.c: 
	Removed printf statements
	changed a printf into a fprintf(stderr,

	* libxnee/src/xnee_session.c: 
	xnee_setup_display called earlier (N900 fix)

	* libxnee/src/xnee_xinput.c: 
	Updated (c) year
	changed a printf into a fprintf

2010-09-18  Henrik Sandklef  <hesa@sandklef.com>

	* xswine/main.c: 